[package]
name = "application"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1"
anyhow = "1"

kernel = { path = "../kernel", features = ["re-export"] }