[package]
name = "application"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.11"
async-trait = "0.1"

thiserror = { workspace = true }
anyhow =  { workspace = true }

kernel = { path = "../kernel", features = ["re-export", "mock"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
mock = []