[package]
name = "driver"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
uuid = "1.3"
time = "0.3"
deadpool-redis = "0.11"
sqlx = { version = "0.6", features = ["uuid", "time", "postgres", "runtime-tokio-native-tls"] }
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
once_cell = "1"
reqwest = "0.11"

application = { path = "../application" }
kernel = { path = "../kernel" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }