[package]
name = "driver"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
async-trait = "0.1"
deadpool-redis = "0.12"
sqlx = { version = "0.6", features = ["uuid", "time", "postgres", "runtime-tokio-native-tls"] }
serde_json = { version = "1", features = ["raw_value"] }
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
once_cell = "1"
try-ref = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

thiserror = { workspace = true }
anyhow =  { workspace = true }

application = { path = "../application" }
kernel = { path = "../kernel" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }