[package]
name = "driver"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
async-trait = "0.1"
deadpool-redis = "0.14.0"
sqlx = { version = "0.7", features = ["uuid", "time", "postgres", "runtime-tokio-native-tls"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
once_cell = "1"
merge-opt = "0.1.0"
try-ref = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
toml = "0.8"
rmp-serde = "1.1.2"
reqwest = { version = "0.12", features = ["json"] }
blake3 = "1.5.0"

thiserror = { workspace = true }
anyhow =  { workspace = true }

tracing = "0.1"

application = { path = "../application" }
kernel = { path = "../kernel" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }