[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8.5"
uuid = { version = "1.3", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1"
destructure = "0.1.2"
async-trait = "0.1"
jsonwebkey = "0.3.5"
url = "2.3.1"

thiserror = "1"
anyhow = "1"