[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.12.1"
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8.5"
uuid = { version = "1.5", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
base64 = "0.22.0"
once_cell = "1"
destructure = "0.5.5"
async-trait = "0.1"
jsonwebtoken = "9.2.0"
jsonwebkey = { version =  "0.3.5", features = ["generate"] }
url = { version = "2.4.1", features = ["serde"] }
try-ref = "0.1"

thiserror = { workspace = true }
anyhow =  { workspace = true }

[features]
interfaces = []
prelude = []
default = ["interfaces", "prelude"]
mock = []
jsonwebkey = []
url  = []
uuid = []
time = []
re-export = ["jsonwebkey", "url", "uuid", "time"]